tests/fixtures/fail/raw_init_use_after_move.sali
let Resource = struct(value: i32)

let main(): i32 = {
  let pointer = unsafe do {
    raw_alloc(Resource)(size_of(Resource), align_of(Resource))
  }
  let resource = Resource(42)
  unsafe do {
    raw_init(pointer, resource)
  }
  resource.value
}
